maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:47: error: identifier expected but '(' found.
def numeroterLesCases((XBiscuit, YBiscuit):(Int,Int))
                      ^JediEscaper:62: error: ':' expected but '}' found.
}
^